--- a/app/views/acceptance_validations/edit.html.erb
+++ b/app/views/acceptance_validations/edit.html.erb
@@ -6,18 +6,18 @@
 </div>
 <div class="container">
   <%= render "common/error_messages", target: @acceptance_validation %>
-  <%= form_for [@property, @acceptance_validation], url: property_acceptance_validations_path(@property, @acceptance_validation), html: { class: 'form-horizontal' } do |f| %>
+  <%= form_for @acceptance_validation, html: { class: 'form-horizontal' } do |f| %>
     <div class="block block-condensed">
       <div class="app-heading app-heading-small">
         <div class="title">
-          <h2>New <%= arm_t('acceptance_validation') %></h2>
+          <h2>Edit <%= arm_t('acceptance_validation') %></h2>
         </div>
       </div>
       <div class="block-content">
         <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'acceptance_validation.property' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @property.en_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @acceptance_validation.property.en_name, readonly: true, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
@@ -28,8 +28,8 @@
         </div>
       </div>
       <div class="block-footer">
-        <%= f.submit 'Create', class: 'btn btn-primary' %>
-        <%= link_to 'Return', @property.model, class: 'pull-right btn btn-default' %>
+        <%= f.submit 'Update', class: 'btn btn-primary' %>
+        <%= link_to 'Return', @acceptance_validation.property.model, class: 'pull-right btn btn-default' %>
       </div>
     </div>
   <% end %>
