--- a/app/views/numericality_validations/edit.html.erb
+++ b/app/views/numericality_validations/edit.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
   <%= render "common/error_messages", target: @numericality_validation %>
-  <%= form_for [@property, @numericality_validation], url: property_numericality_validations_path(@property, @numericality_validation), html: { class: 'form-horizontal' } do |f| %>
+  <%= form_for @numericality_validation, html: { class: 'form-horizontal' } do |f| %>
     <div class="block block-condensed">
       <div class="app-heading app-heading-small">
         <div class="title">
@@ -17,7 +17,7 @@
         <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'numericality_validation.property' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @property.en_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @numericality_validation.property.en_name, readonly: true, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
@@ -52,14 +52,14 @@
               <label><%= f.radio_button :only_integer, true %> Yes</label>
             </div>
             <div class="app-radio inline round">
-              <label><%= f.radio_button :only_integer, false, checked: true %> No</label>
+              <label><%= f.radio_button :only_integer, false %> No</label>
             </div>
           </div>
         </div>
       </div>
       <div class="block-footer">
-        <%= f.submit 'Create', class: 'btn btn-primary' %>
-        <%= link_to 'Return', @property.model, class: 'pull-right btn btn-default' %>
+        <%= f.submit 'Update', class: 'btn btn-primary' %>
+        <%= link_to 'Return', @numericality_validation.property.model, class: 'pull-right btn btn-default' %>
       </div>
     </div>
   <% end %>
