--- a/app/views/uniqueness_validations/show.html.erb
+++ b/app/views/uniqueness_validations/show.html.erb
@@ -5,32 +5,33 @@
   </div>
 </div>
 <div class="container">
-  <%= render "common/error_messages", target: @uniqueness_validation %>
-  <%= form_for [@property, @uniqueness_validation], url: property_uniqueness_validations_path(@property, @uniqueness_validation), html: { class: 'form-horizontal' } do |f| %>
+  <%= styled_flash %>
+  <form class="form-horizontal">
     <div class="block block-condensed">
       <div class="app-heading app-heading-small">
         <div class="title">
-          <h2>New <%= arm_t('uniqueness_validation') %></h2>
+          <h2>View <%= arm_t('uniqueness_validation') %></h2>
         </div>
       </div>
       <div class="block-content">
         <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'uniqueness_validation.property' %></label>
           <div class="col-sm-6">
-            <%= text_field_tag nil, @property.en_name, readonly: true, class: 'form-control' %>
+            <%= text_field_tag nil, @uniqueness_validation.property.en_name, readonly: true, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label"><%= ara_t 'uniqueness_validation.scopes' %></label>
           <div class="col-sm-6">
-            <%= f.text_field :scopes, value: @uniqueness_validation.scopes.join(','), data: { role: 'tagsinput' }, class: 'form-control' %>
+            <%= text_field_tag nil, @uniqueness_validation.scopes.join(', '), readonly: true, class: 'form-control' %>
           </div>
         </div>
       </div>
       <div class="block-footer">
-        <%= f.submit 'Create', class: 'btn btn-primary' %>
-        <%= link_to 'Return', @property.model, class: 'pull-right btn btn-default' %>
+        <%= link_to 'Edit', edit_uniqueness_validation_path(@uniqueness_validation), class: 'btn btn-primary' %>
+        <%= link_to 'Destroy', @uniqueness_validation, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+        <%= link_to 'Return', @uniqueness_validation.property.model, class: 'pull-right btn btn-default' %>
       </div>
     </div>
-  <% end %>
+  </form>
 </div>
