--- a/app/assets/stylesheets/boooya/theme-custom.scss
+++ b/app/assets/stylesheets/boooya/theme-custom.scss
@@ -41,3 +41,63 @@ form span.required {
 .weather-icon {
   margin-top: 20px;
 }
+
+.dd-content-extra {
+  display: block;
+  height: 40px;
+  margin: 5px 0;
+  padding: 0 20px 0 40px;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  line-height: 40px;
+  border: 1px solid #DBE0E4;
+  background: #FFF;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: background 100ms linear;
+  -moz-transition: background 100ms linear;
+  -ms-transition: background 100ms linear;
+  -o-transition: background 100ms linear;
+  transition: background 100ms linear;
+}
+
+.dd-dragel > .dd-item-extra > .dd-content-extra {
+  margin: 0;
+}
+
+.dd-item-extra > button {
+  margin-left: 30px;
+}
+
+.dd-handle-extra {
+  position: absolute;
+  margin: 0;
+  left: 1px;
+  top: 1px;
+  cursor: pointer;
+  width: 28px;
+  height: 38px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  border: 0;
+}
+
+.dd-handle-extra:before {
+  content: '≡';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 100%;
+  text-align:
+  center; text-indent: 0;
+  color: #666;
+  font-size: 25px;
+  font-weight: normal;
+}
