--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -13,7 +13,7 @@
     <div class="col-md-3">
       <div class="tile-basic tile-basic-bordered">
         <div class="tile-content">
-          <h3 class="tile-title"><%= link_to model.name.camelize, model, target: '_blank' %></h3>
+          <h3 class="tile-title"><%= link_to model.name.camelize, model %></h3>
           <span class="tile-subtitle padding-bottom-10">R<%= model.regular_properties.length %> / E<%= model.enumeration_properties.length %> / F<%= model.file_properties.length %></span>
           <div class="app-widget-button app-widget-button-ghost app-widget-button-<%= model.orm_loggable.present? ? 'success' : 'default' %>"><span class="icon-document"></span></div>&nbsp;
           <div class="app-widget-button app-widget-button-ghost app-widget-button-<%= model.authenticatable.present? ? 'success' : 'default' %>"><span class="icon-lock"></span></div>&nbsp;
