--- a/app/views/cascades/show.html.erb
+++ b/app/views/cascades/show.html.erb
@@ -71,7 +71,7 @@
               <%= cascade_redundancy.model.en_name %>
             </button>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Destroy', cascade_redundancy, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+              <li><%= link_to 'Destroy', cascade_redundancy_path(cascade_redundancy, from: params[:from]), method: :delete, data: { confirm: 'Are you sure?' } %></li>
             </ul>
           </div>
           <% end %>
@@ -92,7 +92,7 @@
 <div class="modal fade" id="modal-new-cascade-redundancy" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="icon-cross"></span></button>
-    <%= form_for [@cascade, @cascade.redundancies.new], html: { class: 'form-horizontal' } do |f| %>
+    <%= form_for [@cascade, @cascade.redundancies.new], url: cascade_cascade_redundancies_path(@cascade, @cascade.redundancies.new, from: params[:from]), html: { class: 'form-horizontal' } do |f| %>
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">New Cascade Redundancy</h4>
